bug fix: layout fix for x axis creating white space on right side

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,6 +39,10 @@ body {
   color: grey;
 }
 
+.main-container{
+  width: 97vw;
+}
+
 .main-nav {
   display: flex;
   justify-content: space-between;
